fix email transition

--- a/src/Main.css
+++ b/src/Main.css
@@ -6,7 +6,8 @@
 .Research:hover text,
 .github:hover text,
 .linkedin:hover text,
-.resume:hover text{
+.resume:hover text,
+.mail:hover text{
   fill: #0B1013;
 }
 
